

                 SCons - a software construction tool

                            Change Log

NOTE: The 4.0.0 Release of SCons dropped Python 2.7 Support

RELEASE  VERSION/DATE TO BE FILLED IN LATER

  From William Deegan:
    - Fix yacc tool, not respecting YACC set at time of tool initialization.

  From Adam Gross:
    - Fix minor bug affecting SCons.Node.FS.File.get_csig()'s usage of the MD5 chunksize.
      User-facing behavior does not change with this fix (GH Issue #3726).

  From Rocco Matano:
    - Fix Zip tool to respect ZIPCOMSTR. Previously all zip builder calls would yield something
      like zip(["test.zip"], ["zip_scons.py"]) and ignore ZIPCOMSTR if ZIPCOM and ZIPCOMSTR
      weren't set after the Environment/Tool is initialized. (Explained in PR #3659)

  From Mats Wichmann:
    - Complete tests for Dictionary, env.keys() and env.values() for
      OverrideEnvironment. Enable env.setdefault() method, add tests.


RELEASE 4.0.1 - Mon, 16 Jul 2020 16:06:40 -0700

  From Rob Boehne:
    - Fix fortran tools to set SHFORTRAN variables to $FORTRAN, similarly SHF77, SHF90, SHF95,
      SHF03 and SHF08 will default to the variables $F77, $F90, $F95, $F03 and $F08 respectively.
      If you were depending on changing the value of FORTRAN (or $F[0-9][0-9]) having no effect
      on the value of SHFORTRAN, this change will break that.   The values of FORTRAN, F77, F90,
      F95, F03, F08 and SHFORTRAN, SHF77 (etc.) now are not overridden in generate if alredy set
      by the user.
    - Fix subprocess execution of 'lslpp' on AIX to produce text standard i/o.
    - Re-do the fix for suncxx tool (Oracle Studio compiler) now that only Python 3 is supported,
      to avoid decoding errors.

  From William Deegan:
    - Added Environment() variable TEMPFILEDIR which allows setting the directory which temp
      files createdby TEMPFILEMUNGE are created in.

  From Daniel Moody:
    - Added method on Node to test if its node used in SConf. (Github Issue #3626)